Added text to root using javascript

--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
   <body>
     <div id="root"></div>
   </body>
-  <script>
+  <!-- <script>
     const heading = document.createElement("h1");
     heading.textContent = "petPooja using javascript";
     const root = document.getElementById("root");
     root.appendChild(heading);
+  </script> -->
+  <script
+    crossorigin
+    src="https://unpkg.com/react@18/umd/react.development.js"
+  ></script>
+  <script
+    crossorigin
+    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+  ></script>
+  <script>
+    const heading = React.createElement("h1", {}, "petPooja using react");
+
+    const root = ReactDOM.createRoot(document.getElementById("root"));
+
+    root.render(heading);
   </script>
 </html>
