--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>petPooja🍲</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Not Rendered</div>
   </body>
   <!-- <script>
     const heading = document.createElement("h1");
@@ -23,10 +23,16 @@
     src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
   ></script>
   <script>
-    const heading = React.createElement("h1", {}, "petPooja using react");
+    // Creating a nested complex html structure
+    const element = React.createElement("div", { id: "element" }, [
+      React.createElement("div", { id: "firstChild" }, "first child"),
+      React.createElement("div", { id: "secondChild" }, "second child"),
+    ]);
 
+    const heading = React.createElement("h1", {}, "petPooja using react");
+    console.log(heading);
     const root = ReactDOM.createRoot(document.getElementById("root"));
 
-    root.render(heading);
+    root.render(element);
   </script>
 </html>
