--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>petPooja🍲</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div id="root">Not Rendered</div>
@@ -22,17 +23,5 @@
     crossorigin
     src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
   ></script>
-  <script>
-    // Creating a nested complex html structure
-    const element = React.createElement("div", { id: "element" }, [
-      React.createElement("div", { id: "firstChild" }, "first child"),
-      React.createElement("div", { id: "secondChild" }, "second child"),
-    ]);
-
-    const heading = React.createElement("h1", {}, "petPooja using react");
-    console.log(heading);
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-
-    root.render(element);
-  </script>
+  <script src="./App.js"></script>
 </html>
