--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
   <body>
     <div id="root">Not Rendered</div>
   </body>
-  <script type="module" src="./App.js"></script>
+  <script type="module" src="./src/App.js"></script>
 </html>
