--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>🥗 petPooja</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
-  <body>
+  <body class="no-scrollbar">
     <div id="root">Not Rendered</div>
   </body>
   <script type="module" src="index.js"></script>
